1.Refine config formate 2.Support couch db for key value store
